--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@nicky-lenaers/ngx-scroll-to": "^2.0.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "dotenv": "^7.0.0",
